--- a/2017270721_박기범.md
+++ b/2017270721_박기범.md
@@ -39,14 +39,14 @@ syn+ack를 받은 클라이언트는 전송 받은 ACK 값을 sequence number로
 3 way handshaking 과정을 이용해 많은 공격이 발생할 수 있다.
 간단한 예를 몇개 들어보자면 
 
-1.syn flooding 공격
-클라이언트가 수많은 syn 패킷을 전송해 서버가 감당할 수 없을 정도에 다다르면 서버는 더이상 서비스를 제공할 수 없는 DoS 상태가 된다.
+- syn flooding 공격
+  클라이언트가 수많은 syn 패킷을 전송해 서버가 감당할 수 없을 정도에 다다르면 서버는 더이상 서비스를 제공할 수 없는 DoS 상태가 된다.
 
-2.port scan
-클라이언트가 서버의 특정 포트가 열려있는지, 닫혀있는지 확인 하기 위해서 syn,FIN,PSH 등의 패킷들을 전송한 후 어떤 응답이 오는지에 따라 포트의 오픈 여부를 확인하는 공격이다.
+- port scan
+  클라이언트가 서버의 특정 포트가 열려있는지, 닫혀있는지 확인 하기 위해서 syn,FIN,PSH 등의 패킷들을 전송한 후 어떤 응답이 오는지에 따라 포트의 오픈 여부를 확인하는 공격이다.
 
-3.Session hijacking
-정상적인 클라이언트와 서버가 연결을 유지하고 있는 과정에서 공격자가 서버와 연결을 하기 위해 정상 클라이언트의 sequence number를 예측하여 서버에게 연결 요청을 보낸다. 이 과정에서 정상 클라이언트가 서버와의 연결을 끊어지게 만들기 위해서 공격자는 RST 패킷을 전송해 정상적인 연결을 끊는다.
+- Session hijacking
+  정상적인 클라이언트와 서버가 연결을 유지하고 있는 과정에서 공격자가 서버와 연결을 하기 위해 정상 클라이언트의 sequence number를 예측하여 서버에게 연결 요청을 보낸다. 이 과정에서 정상 클라이언트가 서버와의 연결을 끊어지게 만들기 위해서 공격자는 RST 패킷을 전송해 정상적인 연결을 끊는다.
 
 ## About SIP[3]
 
