--- a/2017270721_박기범.md
+++ b/2017270721_박기범.md
@@ -167,7 +167,7 @@ DoS는 공격자가 인증되지 않았거나 원하지 않는 트래픽을 VoIP
 
 ## Conclusion
 
-
+이와 같이 Session initiation Protocol에 대한 설명과 취약점, 그리고 방어법에 대해 알아보았다. 일단 SIP의 방식이 HTTP와 굉장히 유사한 부분이 많고, TCP/UDP를 사용한다는 점에서 이번 에세이의 주제로 적합하다고 생각했다. TCP 위에서의 취약점에 대해 찾아 보니 유사한 점이 확실히 많았다. 하지만 HTTP와는 다르게 텍스트 형태로 전송되어 평문 노출에 있어서 더욱 취약할 수 있다고 생각되었다. 
 
 ---
 
