--- a/SIP_Essay/2017270721_박기범.md
+++ b/SIP_Essay/2017270721_박기범.md
@@ -22,7 +22,7 @@
 
 서버에 데이터를 요청하는 클라이언트가 서버와 연결하는 방법으로 3way handshaking이 있다. 이 방법은 연결지향적인 TCP를 기반으로 사용된다. 연결을 유지하기 위해서 호스트들은 sequence number를 사용하여 다음에 들어올 패킷의 순서를 예측한다.  클라이언트가 새로운 패킷을  받으면 ACK 패킷을 전달해 데이터를 정상적으로 받았고, 다음 패킷을 기다리고 있다고 알려준다. 이러한 방법을 그림으로 자세히 살펴보자.
 
-![3way](https://www.mdpi.com/2076-3417/6/11/358/htm)
+![3way](https://github.com/KingsleyTiger/kingsley/tree/Network_Vul/SIP_Essay/PIC/3way.png)
 
 
 1.client가 랜덤한 sequence number를 가진 syn 패킷을 서버에 전송한다.
