--- a/SIP_Essay/2017270721_박기범.md
+++ b/SIP_Essay/2017270721_박기범.md
@@ -22,7 +22,7 @@
 
 서버에 데이터를 요청하는 클라이언트가 서버와 연결하는 방법으로 3way handshaking이 있다. 이 방법은 연결지향적인 TCP를 기반으로 사용된다. 연결을 유지하기 위해서 호스트들은 sequence number를 사용하여 다음에 들어올 패킷의 순서를 예측한다.  클라이언트가 새로운 패킷을  받으면 ACK 패킷을 전달해 데이터를 정상적으로 받았고, 다음 패킷을 기다리고 있다고 알려준다. 이러한 방법을 그림으로 자세히 살펴보자.
 
-![![image](https://user-images.githubusercontent.com/37167615/116045203-c71bb680-a6ac-11eb-9e5e-129ead7e3019.png)]
+![image](https://user-images.githubusercontent.com/37167615/116045203-c71bb680-a6ac-11eb-9e5e-129ead7e3019.png)
 
 
 1.client가 랜덤한 sequence number를 가진 syn 패킷을 서버에 전송한다.
@@ -52,7 +52,7 @@ syn+ack를 받은 클라이언트는 전송 받은 ACK 값을 sequence number로
 
 Session Initiation Protocol(SIP)은 IETF에서 정의한 시그널링 프로토콜이다. 여기서 시그널링 프로토콜이란 통신의 상대방을 찾아 호/세션 등의 성립, 유지, 해제를 관리하는 프로토콜을 의미한다.  이 시그널링 프로토콜을 이용해 VoIP와 인터넷 기반의 화상통화 등멀티미디어 서비스의 세션을 생성하고 유지,해제한다. TCP와 UDP를 사용하여 requests/reply 요청을 전송하기 때문에 HTTP와 비슷한 구조를 가진다. Session Description Protocol(SDP)를 사용해 어떤 프로토콜을 사용할 지  제어할 수 있다. 
 또한 텍스트를 기반으로 한 requests/reply를 전송하기 때문에 문제를 관리하고 제어하기에 편리함이 있다. requests/reply에서 사용되는 메세지는 세션에 참가한 참가자들에 대한 정보와 어떻게 네트워크에 도달할 지 설명해준다.
---여기에 그림-- 
+![image](https://github.com/KingsleyTiger/kingsley/blob/Network_Vul/SIP_Essay/PIC/mainsip.png)
 기본적으로 3way handshaking과 비슷하게 invite ,200 OK, ACK 3개의 패킷만 전송된다. 이런 기본적인 흐름을 "호 절차"라고 한다. 
 실제로 사용되는 호 절차를 알아보자.
 --여기에 그림2--
